Add DESeq and update pages

--- a/DESeq2.html
+++ b/DESeq2.html
@@ -237,7 +237,7 @@ Kostic, A. D., Gevers, D., Pedamallu, C. S., Michaud, M., Duke, F., Earl, A. M.,
 packageVersion(&quot;phyloseq&quot;)
 </code></pre>
 
-<pre><code>## [1] &#39;1.7.16&#39;
+<pre><code>## [1] &#39;1.7.17&#39;
 </code></pre>
 
 <p>Defined file path, and import the published OTU count data into R.</p>
@@ -403,11 +403,15 @@ ggplot(sigtab, aes(x = Genus, y = log2FoldChange, color = Phylum)) + geom_point(
 
 <h2>Other extensions for the phyloseq package:</h2>
 
+<h4><a href="DESeq.html">DESeq</a></h4>
+
 <h4><a href="DESeq2.html">DESeq2</a></h4>
 
 <h4><a href="edgeR.html">edgeR</a></h4>
 
 <h4><a href="extensions-index.html">extensions-index</a></h4>
+
+<h4><a href="index.html">index</a></h4>
 
 </body>
 
