--- a/edgeR.html
+++ b/edgeR.html
@@ -285,14 +285,14 @@ PLoS Computational Biology <em>in press</em></p>
 <pre><code class="r">date()
 </code></pre>
 
-<pre><code>## [1] &quot;Mon Feb 10 16:10:13 2014&quot;
+<pre><code>## [1] &quot;Sat Feb 15 10:54:08 2014&quot;
 </code></pre>
 
 <pre><code class="r">library(&quot;phyloseq&quot;)
 packageVersion(&quot;phyloseq&quot;)
 </code></pre>
 
-<pre><code>## [1] &#39;1.7.16&#39;
+<pre><code>## [1] &#39;1.7.17&#39;
 </code></pre>
 
 <pre><code class="r">library(&quot;edgeR&quot;)
@@ -408,11 +408,15 @@ ggplot(sigtabgen, aes(x = Genus, y = logFC, color = Phylum)) + geom_point(size =
 
 <h2>Other extensions for the phyloseq package:</h2>
 
+<h4><a href="DESeq.html">DESeq</a></h4>
+
 <h4><a href="DESeq2.html">DESeq2</a></h4>
 
 <h4><a href="edgeR.html">edgeR</a></h4>
 
 <h4><a href="extensions-index.html">extensions-index</a></h4>
+
+<h4><a href="index.html">index</a></h4>
 
 </body>
 
