--- a/extensions-index.html
+++ b/extensions-index.html
@@ -152,13 +152,15 @@ hr {
 
 <h1>The phyloseq Extensions Index</h1>
 
-<p>This page is automagically updated when I do a periodic full rebuild of the phyloseq extensions documentation. The date of this particular re-build is Mon Feb 10 16:10:30 2014.</p>
+<p>This page is automagically updated when I do a periodic full rebuild of the phyloseq extensions documentation. The date of this particular re-build is Sat Feb 15 10:54:23 2014.</p>
 
 <p>Don&#39;t forget to checkout <a href="http://joey711.github.io/phyloseq-demo/">the phyloseq demo repository</a> for other tutorials; some more in-depth or lengthy than are maintained here, where the focus is documenting phyloseq extension functionality rather than demonstrating use cases with new/large datasets.</p>
 
 <hr/>
 
 <h2>Available Extensions</h2>
+
+<h3><a href="DESeq.html">DESeq</a></h3>
 
 <h3><a href="DESeq2.html">DESeq2</a></h3>
 
@@ -169,6 +171,8 @@ hr {
 <h2>The R Markdown Source Code</h2>
 
 <p>For more advanced users interested in seeing and/or modifying the <a href="http://www.rstudio.com/ide/docs/r_markdown">R markdown</a> source code from which these reproducible, web browser-friendly tutorials were created.</p>
+
+<h3><a href="DESeq.Rmd">DESeq.Rmd</a></h3>
 
 <h3><a href="DESeq2.Rmd">DESeq2.Rmd</a></h3>
 
