Updated front page.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <h1>
 <a name="phyloseq-extensions" class="anchor" href="#phyloseq-extensions"><span class="octicon octicon-link"></span></a>phyloseq-extensions</h1>
 
+<p>See the <a href="http://joey711.github.io/phyloseq-extensions/extensions-index.html">index of
+      included extensions</a> To browse the output of the extension
+      examples, or quickly grab the extension function code from the
+      top of the example. Please heed the request for citing this work
+      if you find it useful. Each extension tutorial lists the
+      relevant publications that should be cited.</p>
+      
 <p>This is a repository of self-contained extensions for <a href="http://joey711.github.io/phyloseq/">the phyloseq package</a> for R. Typically these extensions are provided here because they rely on a separate R package that is not among the official dependencies in <a href="http://joey711.github.io/phyloseq/">phyloseq</a>, but may still be useful in special cases.</p>
 
 <p>If you find any of this code useful, please cite the publication describing  <a href="http://joey711.github.io/phyloseq/">phyloseq</a> (below), as well as any additional citations mentioned in the extension's tutorial. The source code for creating each tutorial is also provided in this repository as <a href="http://www.rstudio.com/ide/docs/authoring/using_markdown">R-flavored markdown</a>.</p>
