Added another link to extensions index

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="phyloseq-extensions" class="anchor" href="#phyloseq-extensions"><span class="octicon octicon-link"></span></a>phyloseq-extensions</h1>
-
+<a name="phyloseq-extensions" class="anchor" href="#phyloseq-extensions"><span class="octicon octicon-link"></span></a><a href="http://joey711.github.io/phyloseq-extensions/extensions-index.html">phyloseq-extensions</a></h1>
+      
 <p>See the <a href="http://joey711.github.io/phyloseq-extensions/extensions-index.html">index of
       included extensions</a> To browse the output of the extension
       examples, or quickly grab the extension function code from the
